--- a/ckanext/amplus/fanstatic/less/_insights.less
+++ b/ckanext/amplus/fanstatic/less/_insights.less
@@ -11,7 +11,7 @@
 
     .h2 {
         font-size: 40px;
-        font-weight: 400;
+        font-weight: @font-weight-medium;
     }
 
     .box {
@@ -31,23 +31,23 @@
 
     .btn-view-all {
         padding: 15px 70px;
-        font-size: 16px;
-        font-weight: 700;
+        font-size: @font-size-medium-large;
+        font-weight: @font-weight-larger;
         box-shadow: 0 10px 10px 0 fade(@text-dark, 30%);
     }
 
     .title {
         color: @text-dark;
-        font-size: 20px;
-        font-weight: 600;
+        font-size: @font-size-large-plus;
+        font-weight: @font-weight-large;
         padding: 10px 20px;
         margin: 0;
     }
 
     .description {
         color: @silver;
-        font-size: 14px;
-        font-weight: 400;
+        font-size: @font-size-medium;
+        font-weight: @font-weight-medium;
         padding: 0px 20px 20px 20px;
         margin: 0;
     }
