--- a/ckanext/amplus/fanstatic/less/_list-item.less
+++ b/ckanext/amplus/fanstatic/less/_list-item.less
@@ -22,8 +22,8 @@
   }
 
   .media-heading {
-    font-size: 21px;
-    font-weight: 600;
+    font-size: @font-size-larger;
+    font-weight: @font-weight-large;
   }
 
   .media-image {
