--- a/ckanext/amplus/fanstatic/less/_nav.less
+++ b/ckanext/amplus/fanstatic/less/_nav.less
@@ -76,8 +76,7 @@
         a {
           padding: 2.5rem 2rem;
           border-radius: 0;
-          font-size: 18px;
-          // font-weight: 500;
+          font-size: @font-size-large;
 
           &:hover,
           &:focus {
