--- a/ckanext/amplus/fanstatic/less/_promoted.less
+++ b/ckanext/amplus/fanstatic/less/_promoted.less
@@ -1,8 +1,8 @@
 .hero {
-  padding: 120px 0px;
   .flex;
   .flex-justify-center;
   background: @white;
+
 
   .hero-img {
     min-width: auto;
@@ -17,12 +17,12 @@
 
   .page-heading {
     padding-top: 30px;
-    font-size: 50px;
+    font-size: @font-size-grand;
     color: @brand-primary;
   }
 
   .promoted-desc {
-    font-size: 18px;
+    font-size: @font-size-large;
     margin-bottom: 0;
   }
 }
