--- a/ckanext/amplus/fanstatic/less/_responsive-lg.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-lg.less
@@ -34,7 +34,7 @@
       >li {
         a {
           padding: 2.2rem .8rem;
-          font-size: 15px;
+          font-size: @font-size-medium-plus;
 
           img {
             max-width: 18px;
