--- a/ckanext/amplus/fanstatic/less/_typography.less
+++ b/ckanext/amplus/fanstatic/less/_typography.less
@@ -1,5 +1,5 @@
 .header-secondary {
-  font-size: 24px;
+  font-size: @font-size-largest;
   padding-left: .5rem;
 }
 
@@ -13,18 +13,18 @@
 .module-content {
   &>h1 {
     color: @gray-medium;
-    font-weight: 400;
-    font-size: 40px;
+    font-weight: @font-weight-medium;
+    font-size: @font-size-huge;
   }
 }
 .control {
   & input {
-    background: #fff;
+    background: @white;
   }
 }
 .module .read-more {
   color: @brand-primary;
-  font-size: 13px;
-  font-weight: 600;
+  font-size: @font-size-medium-small;
+  font-weight: @font-weight-large;
   text-decoration: underline;
 }
