--- a/ckanext/amplus/fanstatic/less/_breadcrumb.less
+++ b/ckanext/amplus/fanstatic/less/_breadcrumb.less
@@ -24,13 +24,13 @@
       &.active {
         >a {
           color: @brand-primary;
-          font-weight: 400;
+          font-weight: @font-weight-medium;
         }
       }
 
       .active {
         color: @brand-primary;
-        font-weight: 400;
+        font-weight: @font-weight-medium;
       }
     }
   }
