--- a/ckanext/amplus/fanstatic/less/_data.less
+++ b/ckanext/amplus/fanstatic/less/_data.less
@@ -14,20 +14,20 @@
     padding: @gutter-large;
     margin: @gutter-small @gutter-medium;
     background: @white;
-    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 30px 0 fade(@black, 10%);
   }
 
   .dataset-content {
     >div {
-      font-size: 14px;
-      font-weight: 400;
+      font-size: @font-size-medium;
+      font-weight: @font-weight-medium;
       line-height: 17px;
       color: @text-dark;
     }
 
     .dataset-heading a {
-      font-size: 21px;
-      font-weight: 600;
+      font-size: @font-size-larger;
+      font-weight: @font-weight-large;
       color: @brand-secondary;
     }
   }
