--- a/ckanext/amplus/fanstatic/less/_footer.less
+++ b/ckanext/amplus/fanstatic/less/_footer.less
@@ -11,15 +11,15 @@
 }
 
 .text-description {
-  font-size: 15px;
-  font-weight: 500;
+  font-size: @font-size-medium-plus;
+  font-weight: @font-weight-medium-large;
   margin-top: 25px;
 }
 
 .footer-nav-title {
   color: @brand-secondary;
-  font-size: 18px;
-  font-weight: 600;
+  font-size: @font-size-large;
+  font-weight: @font-weight-large;
 }
 
 .footer-nav {
@@ -29,8 +29,8 @@
     padding: 5px 0;
     a {
       color: @silver;
-      font-size: 16px;
-      font-weight: 600;
+      font-size: @font-size-medium-large;
+      font-weight: @font-weight-large;
     }
   }
 }
