--- a/ckanext/amplus/fanstatic/less/_forms.less
+++ b/ckanext/amplus/fanstatic/less/_forms.less
@@ -1,5 +1,5 @@
 .facet {
-  font-weight: 600;
+  font-weight: @font-weight-large;
 }
 
 .filtered.pill {
@@ -29,7 +29,7 @@
 
     >*:first-child {
       order: -2;
-      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+      box-shadow: @shadow-light;
       min-width: 50%;
       width: 50%;
     }
@@ -41,7 +41,7 @@
     >h2 {
       order: -1;
       color: @brand-secondary;
-      font-weight: 600;
+      font-weight: @font-weight-large;
       padding-left: 2rem;
       margin-bottom: 30px;
       margin-top: 0;
@@ -85,7 +85,7 @@
 
       select {
         height: 46px;
-        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+        box-shadow: @shadow-light;
         padding-right: 4rem;
         -webkit-appearance: none;
         -moz-appearance: none;
