--- a/ckanext/amplus/fanstatic/less/_visualize.less
+++ b/ckanext/amplus/fanstatic/less/_visualize.less
@@ -8,7 +8,7 @@
     padding: 20px;
     margin: 20px;
     background: @white;
-    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 30px 0 fade(@black, 10%);
   }
 }
 
@@ -25,15 +25,15 @@
 }
 
 .title {
-  font-size: 20px;
-  font-weight: 500;
+  font-size: @font-size-large-plus;
+  font-weight: @font-weight-medium-large;
   text-decoration: underline;
 }
 
 .group-heading {
-  font-size: 40px;
+  font-size: @font-size-huge;
   text-align: center;
-  font-weight: 400;
+  font-weight: @font-weight-medium;
   padding: 80px 40px 40px;
 }
 
@@ -70,8 +70,8 @@
   }
 
   .toggle-view {
-    font-size: 18px;
-    font-weight: 700;
+    font-size: @font-size-large;
+    font-weight: @font-weight-larger;
     letter-spacing: 1.8px;
     color: @silver;
     text-transform: uppercase;
