Update .account-masthead a color and font-weight

--- a/ckanext/amplus/fanstatic/less/_nav.less
+++ b/ckanext/amplus/fanstatic/less/_nav.less
@@ -6,10 +6,13 @@
       li {
         border-left: none;
 
-        >a {
+        a{
+          color: @gray-light;
+          font-weight: inherit;
 
           &:hover,
           &:active {
+            color: @gray-light;
             background: @brand-quaternary;
           }
         }
