Re-add missing .btn:active:hover styling

--- a/ckanext/amplus/fanstatic/less/_mixins.less
+++ b/ckanext/amplus/fanstatic/less/_mixins.less
@@ -6,6 +6,7 @@
   &:hover,
   &:focus,
   &:active,
+  &:active:focus,
   &.focus {
     border-color: transparent;
     background-color: @brand-dark;
