Refactor .dataset-resources overrides

--- a/ckanext/amplus/fanstatic/less/_data.less
+++ b/ckanext/amplus/fanstatic/less/_data.less
@@ -32,10 +32,12 @@
     }
   }
 
-  .dataset-resources li .label {
-    background: transparent;
-    color: @silver;
-    border: 1px solid @silver;
-    border-radius: 15px;
+  .dataset-resources {
+    margin-top: @gutter-medium;
+    li {
+      .label {
+        border-radius: 0;
+      }
+    }
   }
 }
