Update variable names

--- a/ckanext/amplus/fanstatic/less/_variables.less
+++ b/ckanext/amplus/fanstatic/less/_variables.less
@@ -37,33 +37,33 @@
 
 @font-primary: 'Barlow', sans-serif;
 
-@font-size-small: 12px;
-@font-size-medium-small:13px;
-@font-size-medium: 14px;
-@font-size-medium-plus: 15px;
-@font-size-medium-large: 16px;
-@font-size-medium-large-plus: 17px;
-@font-size-large: 18px;
-@font-size-large-plus: 20px;
-@font-size-larger: 21px;
-@font-size-larger-plus: 22px;
-@font-size-largest: 24px;
-@font-size-huge: 40px;
-@font-size-grand: 50px;
+@font-size-12: 12px;
+@font-size-13:13px;
+@font-size-14: 14px;
+@font-size-15: 15px;
+@font-size-16: 16px;
+@font-size-17: 17px;
+@font-size-18: 18px;
+@font-size-20: 20px;
+@font-size-21: 21px;
+@font-size-22: 22px;
+@font-size-24: 24px;
+@font-size-40: 40px;
+@font-size-50: 50px;
 
-@font-weihgt-small:300;
-@font-weight-medium: 400;
-@font-weight-medium-large: 500;
-@font-weight-large: 600;
-@font-weight-larger:700;
 
-@gutter-small: 1rem;
-@gutter-medium: @gutter-small * 1.5;
-@gutter-large: @gutter-small * 3;
+@font-weight-400: 400;
+@font-weight-500: 500;
+@font-weight-600: 600;
+@font-weight-700:700;
 
-@gutter-list-item-small: 2rem;
-@gutter-list-item-medium: @gutter-list-item-small * 2;
-@gutter-list-item-large: @gutter-list-item-small * 3;
+@gutter-sm: 1rem;
+@gutter-md: @gutter-sm * 1.5;
+@gutter-lg: @gutter-sm * 3;
+
+@gutter-list-item-sm: 2rem;
+@gutter-list-item-md: @gutter-list-item-sm * 2;
+@gutter-list-item-lg: @gutter-list-item-sm * 3;
 
 @group-icon-size: 8rem;
 @animation-duration: 200ms;
