Replace old variables name with new ones

--- a/ckanext/amplus/fanstatic/less/_facet_list.less
+++ b/ckanext/amplus/fanstatic/less/_facet_list.less
@@ -3,13 +3,13 @@
   background-color: @brand-background;
   border: none;
   padding: 1.5rem;
-  font-size: @font-size-medium-large-plus;
-  font-weight: @font-weight-large;
+  font-size: @font-size-17;
+  font-weight: @font-weight-600;
   
 }
 .side-heading{
   color: @brand-primary;
-  font-weight: @font-weight-large;
+  font-weight: @font-weight-600;
   margin: 1rem 0;
 }
 .keyword-list {
