--- a/ckanext/amplus/fanstatic/less/_footer.less
+++ b/ckanext/amplus/fanstatic/less/_footer.less
@@ -11,26 +11,26 @@
 }
 
 .text-description {
-  font-size: @font-size-medium-plus;
-  font-weight: @font-weight-medium-large;
+  font-size: @font-size-15;
+  font-weight: @font-weight-500;
   margin-top: 25px;
 }
 
 .footer-nav-title {
   color: @brand-secondary;
-  font-size: @font-size-large;
-  font-weight: @font-weight-large;
+  font-size: @font-size-18;
+  font-weight: @font-weight-600;
 }
 
 .footer-nav {
-  margin-top: @gutter-small;
-  margin-bottom: @gutter-small;
+  margin-top: @gutter-sm;
+  margin-bottom: @gutter-sm;
   li {
     padding: 5px 0;
     a {
       color: @silver;
-      font-size: @font-size-medium-large;
-      font-weight: @font-weight-large;
+      font-size: @font-size-16;
+      font-weight: @font-weight-600;
     }
   }
 }
