--- a/ckanext/amplus/fanstatic/less/_forms.less
+++ b/ckanext/amplus/fanstatic/less/_forms.less
@@ -1,5 +1,5 @@
 .facet {
-  font-weight: @font-weight-large;
+  font-weight: @font-weight-600;
 }
 
 .filtered.pill {
@@ -41,7 +41,7 @@
     >h2 {
       order: -1;
       color: @brand-secondary;
-      font-weight: @font-weight-large;
+      font-weight: @font-weight-600;
       padding-left: 2rem;
       margin-bottom: 30px;
       margin-top: 0;
