--- a/ckanext/amplus/fanstatic/less/_group.less
+++ b/ckanext/amplus/fanstatic/less/_group.less
@@ -6,14 +6,14 @@
 
 .primary {
   .group-topics {
-    padding: @gutter-small @gutter-medium;
+    padding: @gutter-sm @gutter-md;
   }
 }
 
 .data {
   > .empty {
     margin: auto;
-    font-size: @font-size-large-plus;
+    font-size: @font-size-20;
   }
 }
 
@@ -28,8 +28,8 @@
   .flex-wrap;
   .flex-column;
   flex: 0 1 21.5%;
-  margin: @gutter-medium;
-  padding: @gutter-large;
+  margin: @gutter-md;
+  padding: @gutter-lg;
   background-color: @white;
   box-shadow: 0 0 30px 0 fade(@black, 10%);
   color: @gray-medium;
@@ -57,20 +57,20 @@
   background: @brand-background;
 
   .group-title {
-    font-size: @font-size-larger-plus;
-    font-weight: @font-weight-large;
+    font-size: @font-size-22;
+    font-weight: @font-weight-600;
     line-height: 1.25;
-    margin: auto @gutter-medium;
+    margin: auto @gutter-md;
   }
 
   .group-desc {
-    margin-top: @gutter-medium;
-    font-size: @font-size-medium-large;
-    padding: 0 @gutter-medium;
+    margin-top: @gutter-md;
+    font-size: @font-size-16;
+    padding: 0 @gutter-md;
   }
 
   .module-image {
-    padding: @gutter-small;
+    padding: @gutter-sm;
   }
 
   .group-icon {
@@ -93,7 +93,7 @@
   }
 
   .group-item-desc {
-    font-size: @font-size-large;
+    font-size: @font-size-18;
   }
 
 }
