--- a/ckanext/amplus/fanstatic/less/_mixins.less
+++ b/ckanext/amplus/fanstatic/less/_mixins.less
@@ -29,14 +29,14 @@
 }
 
 .content-margin-fix {
-  margin-left: -@gutter-medium;
-  margin-right: -@gutter-medium;
+  margin-left: -@gutter-md;
+  margin-right: -@gutter-md;
 }
 
 .content-item-layout {
-  width: calc(50% - @gutter-large );
-  margin: @gutter-medium;
-  padding: @gutter-list-item-medium;
+  width: calc(50% - @gutter-lg );
+  margin: @gutter-md;
+  padding: @gutter-list-item-md;
   border-radius: 0;
   box-shadow: @shadow-light;
 }
@@ -48,5 +48,5 @@
   border-radius: 0;
   border: none;
   color: @gray-medium;
-  font-size: @font-size-small;
+  font-size: @font-size-12;
 }
