--- a/ckanext/amplus/fanstatic/less/_nav.less
+++ b/ckanext/amplus/fanstatic/less/_nav.less
@@ -79,7 +79,7 @@
         a {
           padding: 2.5rem 2rem;
           border-radius: 0;
-          font-size: @font-size-large;
+          font-size: @font-size-18;
 
           &:hover,
           &:focus {
@@ -96,7 +96,7 @@
 
   .logo {
     max-width: 350px;
-    padding: 2rem 0 @gutter-small 2.5rem;
+    padding: @gutter-md 0 @gutter-sm 2.5rem;
 
     >img {
       max-width: 100%;
