--- a/ckanext/amplus/fanstatic/less/_promoted.less
+++ b/ckanext/amplus/fanstatic/less/_promoted.less
@@ -2,7 +2,7 @@
   .flex;
   .flex-justify-center;
   background: @white;
-  padding: @gutter-large*3.5 0px;
+  padding: @gutter-lg*3.5 0px;
 
 
   .hero-img {
@@ -18,12 +18,12 @@
 
   .page-heading {
     padding-top: 30px;
-    font-size: @font-size-grand;
+    font-size: @font-size-50;
     color: @brand-primary;
   }
 
   .promoted-desc {
-    font-size: @font-size-large;
+    font-size: @font-size-18;
     margin-bottom: 0;
   }
 }
