--- a/ckanext/amplus/fanstatic/less/_resource-item.less
+++ b/ckanext/amplus/fanstatic/less/_resource-item.less
@@ -17,7 +17,7 @@
     }
 
     .display-name{
-      margin: auto @gutter-medium;
+      margin: auto @gutter-md;
     }
 
     .description{
@@ -55,13 +55,13 @@
 
   .validation-badge {
     position: absolute;
-    bottom: @gutter-small * 2;
-    left: @gutter-large;
+    bottom: @gutter-sm * 2;
+    left: @gutter-lg;
   }
 }
 
 .resource-content {
-  padding: 2rem @gutter-small * 2;
+  padding: 2rem @gutter-sm * 2;
 }
 
 .resource-title {
