--- a/ckanext/amplus/fanstatic/less/_responsive-lg.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-lg.less
@@ -2,7 +2,7 @@
   body {
     & [role=main] {
       .secondary {
-        padding: @gutter-large;
+        padding: @gutter-lg;
       }
     }
   }
@@ -34,7 +34,7 @@
       >li {
         a {
           padding: 2.2rem .8rem;
-          font-size: @font-size-medium-plus;
+          font-size: @font-size-15;
 
           img {
             max-width: 18px;
@@ -79,6 +79,6 @@
   }
   .media-grid .media-item,
   .resource-list .resource-item{
-    width: calc(100% - @gutter-small*2);
+    width: calc(100% - @gutter-sm*2);
   }
 }
