--- a/ckanext/amplus/fanstatic/less/_typography.less
+++ b/ckanext/amplus/fanstatic/less/_typography.less
@@ -1,5 +1,5 @@
 .header-secondary {
-  font-size: @font-size-largest;
+  font-size: @font-size-24;
   padding-left: .5rem;
 }
 
@@ -13,8 +13,8 @@
 .module-content {
   &>h1 {
     color: @gray-medium;
-    font-weight: @font-weight-medium;
-    font-size: @font-size-huge;
+    font-weight: @font-weight-400;
+    font-size: @font-size-40;
   }
 }
 .control {
@@ -24,7 +24,7 @@
 }
 .module .read-more {
   color: @brand-primary;
-  font-size: @font-size-medium-small;
-  font-weight: @font-weight-large;
+  font-size: @font-size-13;
+  font-weight: @font-weight-600;
   text-decoration: underline;
 }
