--- a/ckanext/amplus/fanstatic/less/_visualize.less
+++ b/ckanext/amplus/fanstatic/less/_visualize.less
@@ -25,15 +25,15 @@
 }
 
 .title {
-  font-size: @font-size-large-plus;
-  font-weight: @font-weight-medium-large;
+  font-size: @font-size-20;
+  font-weight: @font-weight-500;
   text-decoration: underline;
 }
 
 .group-heading {
-  font-size: @font-size-huge;
+  font-size: @font-size-40;
   text-align: center;
-  font-weight: @font-weight-medium;
+  font-weight: @font-weight-400;
   padding: 80px 40px 40px;
 }
 
@@ -70,8 +70,8 @@
   }
 
   .toggle-view {
-    font-size: @font-size-large;
-    font-weight: @font-weight-larger;
+    font-size: @font-size-18;
+    font-weight: @font-weight-700;
     letter-spacing: 1.8px;
     color: @silver;
     text-transform: uppercase;
