--- a/ckanext/amplus/fanstatic/less/_breadcrumb.less
+++ b/ckanext/amplus/fanstatic/less/_breadcrumb.less
@@ -4,7 +4,7 @@
   margin-bottom: 0;
 
   .breadcrumb {
-    margin: @gutter-small;
+    margin: @gutter-sm;
     font-size: inherit;
 
     a {
@@ -24,13 +24,13 @@
       &.active {
         >a {
           color: @brand-primary;
-          font-weight: @font-weight-medium;
+          font-weight: @font-weight-400;
         }
       }
 
       .active {
         color: @brand-primary;
-        font-weight: @font-weight-medium;
+        font-weight: @font-weight-400;
       }
     }
   }
