--- a/ckanext/amplus/fanstatic/less/_data.less
+++ b/ckanext/amplus/fanstatic/less/_data.less
@@ -4,36 +4,36 @@
     .flex;
     .flex-wrap;
     min-width: 100%;
-    margin: auto -@gutter-medium;
+    margin: auto -@gutter-md;
   }
 }
 
 .dataset-list {
   >.dataset-item {
     flex: 1 0 33.3%;
-    padding: @gutter-large;
-    margin: @gutter-small @gutter-medium;
+    padding: @gutter-lg;
+    margin: @gutter-sm @gutter-md;
     background: @white;
     box-shadow: 0 0 30px 0 fade(@black, 10%);
   }
 
   .dataset-content {
     >div {
-      font-size: @font-size-medium;
-      font-weight: @font-weight-medium;
+      font-size: @font-size-14;
+      font-weight: @font-weight-400;
       line-height: 17px;
       color: @text-dark;
     }
 
     .dataset-heading a {
-      font-size: @font-size-larger;
-      font-weight: @font-weight-large;
+      font-size: @font-size-21;
+      font-weight: @font-weight-600;
       color: @brand-secondary;
     }
   }
 
   .dataset-resources {
-    margin-top: @gutter-medium;
+    margin-top: @gutter-md;
     li {
       .label {
         border-radius: 0;
