--- a/ckanext/amplus/fanstatic/less/_list-item.less
+++ b/ckanext/amplus/fanstatic/less/_list-item.less
@@ -22,8 +22,8 @@
   }
 
   .media-heading {
-    font-size: @font-size-larger;
-    font-weight: @font-weight-large;
+    font-size: @font-size-21;
+    font-weight: @font-weight-600;
   }
 
   .media-image {
@@ -32,6 +32,6 @@
     height: 100px;
     object-fit: cover;
     border-radius: 50%;
-    margin-right: @gutter-list-item-small;
+    margin-right: @gutter-list-item-sm;
   }
 }
