--- a/ckanext/amplus/fanstatic/less/_nav.less
+++ b/ckanext/amplus/fanstatic/less/_nav.less
@@ -96,7 +96,7 @@
 
   .logo {
     max-width: 350px;
-    padding: @gutter-md 0 @gutter-sm 2.5rem;
+    padding: @gutter-sm*2 0 @gutter-sm 2.5rem;
 
     >img {
       max-width: 100%;
