Update .hero padding

--- a/ckanext/amplus/fanstatic/less/_promoted.less
+++ b/ckanext/amplus/fanstatic/less/_promoted.less
@@ -2,7 +2,7 @@
   .flex;
   .flex-justify-center;
   background: @white;
-  padding: @gutter-lg*3.5 0px;
+  padding: @gutter-lg*4 0;
 
 
   .hero-img {
