Refactor in the quick stats section

--- a/ckanext/amplus/fanstatic/less/_stats.less
+++ b/ckanext/amplus/fanstatic/less/_stats.less
@@ -11,7 +11,7 @@ body {
     padding: 0px 120px;
     height: 100px;
     width: 100%;
-    & h3 {
+    h3 {
         display: none;
     }
 }
@@ -22,10 +22,10 @@ body {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    & a {
+    a {
         display: flex;
     }
-    & .oval {
+    .oval {
         border-radius: 50%;
         background-color: rgba(156, 36, 132, 0.1);
         width: 50px;
@@ -35,19 +35,19 @@ body {
         justify-content: center;
         align-items: center;
     }
-    & .content {
+    .content {
         height: 50px;
         display: inline-flex;
         flex-direction: column;
         text-align: left;
         padding-left: 20px;
     }
-    & .stat-number {
+    .stat-number {
         width: 100%;
         font-size: 20px;
         color: black;
     }
-    & .stat-title {
+    .stat-title {
         font-size: 18px;
         color: black;
         text-transform: capitalize;
