--- a/ckanext/amplus/templates/home/index.html
+++ b/ckanext/amplus/templates/home/index.html
@@ -1,9 +1,6 @@
-{% resource 'c3charts/main' %}
-
 {% ckan_extends %}
 
-{% block primary_content %}
-{{ super() }}
+{% block quick_stats_wrapper %}
 
 <div class="container-fluid">
     <div class="row">
