Show Coming Soon! message for Locate

--- a/ckanext/amplus/templates/home/layout1.html
+++ b/ckanext/amplus/templates/home/layout1.html
@@ -61,9 +61,9 @@
                 {% endif %}
               {% endblock %}
             </div>
-            <div class="data tab-pane fade" id="locate">
+            <div class="data tab-pane fade flex-column flex-align-center" id="locate">
               <!-- Map Section -->
-              <p class="empty">{{ _('No map views have been created yet') }}</p>
+              {% snippet 'snippets/coming_soon.html' %}
             </div>
           </div>
       </div>
