Refactor resource_item.html snippet

--- a/ckanext/amplus/templates/package/snippets/resource_item.html
+++ b/ckanext/amplus/templates/package/snippets/resource_item.html
@@ -2,8 +2,17 @@
 
 {% block resource_item_title %}
 <a class="heading" href="{{ url }}" title="{{ res.name or res.description }}">
-    <span class="display-name">{{ h.resource_display_name(res) | truncate(50) }}</span>
     <span class="format-label" property="dc:format" data-format="{{ res.format.lower() or 'data' }}">{{ h.get_translated(res, 'format') }}</span>
-    <span class="views-count">{{ h.popular('views', res.tracking_summary.total, min=10) }}</span>
+</a>
+{% endblock %}
+
+{% block resource_item_description %}
+<a class="heading-wrap" href="{{ url }}" title="{{ res.name or res.description }}">
+    <span class="heading display-name">{{ h.resource_display_name(res) | truncate(50) }}</span>
+    {% if res.description %}
+      <p class="description">
+        {{ h.markdown_extract(h.get_translated(res, 'description'), extract_length=80) }}
+      </p>
+    {% endif %}
 </a>
 {% endblock %}
