Refactor _responsive-lg.less

--- a/ckanext/amplus/fanstatic/less/_responsive-lg.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-lg.less
@@ -17,9 +17,12 @@
         float: none;
         text-align: center;
     }
-    .homepage .group-container .data div {
-        flex: 1 0 100%;
-        margin: 0 0 40px 0;
+    .data{
+      .visualize-card{
+        flex-basis: 100%;
+        margin-left: auto;
+        margin-right: auto;
+      }
     }
     .homepage .group-container .toggle-section div {
         border: none;
