--- a/ckanext/amplus/templates/home/layout1.html
+++ b/ckanext/amplus/templates/home/layout1.html
@@ -21,18 +21,18 @@
     <div class="container-fluid">
       <div class="row">
         <div class="toggle-section text-center">
-            <ul class="nav nav-tabs">
-              <li class="col-md-4 col-sm-4 col-xs-4">
+            <ul class="nav nav-tabs nav-justified">
+              <li>
                 <a class="toggle-view" href="#data" data-toggle="tab">
                     <p>{{_("Data")}}</p>
                 </a>
               </li>
-              <li class="active col-md-4 col-sm-4 col-xs-4">
+              <li class="active">
                 <a class="toggle-view" href="#visualize" data-toggle="tab">
                     <p>{{_("Visualize")}}</p>
                 </a>
               </li>
-              <li class="col-md-4 col-sm-4 col-xs-4">
+              <li>
                 <a class="toggle-view" href="#locate" data-toggle="tab">
                     <p>{{_("Locate")}}</p>
                 </a>
