Refactor LESS assets

--- a/ckanext/amplus/fanstatic/less/_footer.less
+++ b/ckanext/amplus/fanstatic/less/_footer.less
@@ -1,7 +1,7 @@
 .site-footer {
   color: @silver;
   background: @white;
-  padding: 100px 120px;
+  padding: @gutter-lg*2 0;
 
   .logo {
     img {
