--- a/ckanext/amplus/fanstatic/less/_responsive-xl.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-xl.less
@@ -1,16 +1,1 @@
-@media (min-width: @breakpoint-xl) {
-  .footer-links {
-    text-align: left;
-    .flex;
-    .flex-justify-end;
-
-    & div {
-      margin-right: 40px;
-    }
-
-    & div:nth-child(2) {
-      margin-right: 150px;
-      margin-top: 32px;
-    }
-  }
-}
+@media (min-width: @breakpoint-xl) {}
