--- a/ckanext/amplus/fanstatic/less/_insights.less
+++ b/ckanext/amplus/fanstatic/less/_insights.less
@@ -1,22 +1,15 @@
 .homepage .blogs {
   background: @white;
 
-  .container-fluid {
-    >.row {
-      >[class*='col-'] {
-        display: block;
-      }
-    }
-  }
-
   .h2 {
     font-size: @font-size-40;
     font-weight: @font-weight-400;
+    margin-bottom: @gutter-lg*1.5;
   }
 
   .box {
     box-shadow: 0 0 30px 0 fade(@black, 10%);
-    margin: 60px 0px;
+    margin: @gutter-md 0px;
     border: none;
     transition: .3s;
 
@@ -30,6 +23,7 @@
   }
 
   .btn-view-all {
+    margin: @gutter-lg*1.5 auto auto;
     padding: 15px 70px;
     font-size: @font-size-16;
     font-weight: @font-weight-700;
