--- a/ckanext/amplus/fanstatic/less/_responsive-lg.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-lg.less
@@ -11,10 +11,10 @@
 @media (max-width: @breakpoint-lg) {
     .attribution {
         text-align: center;
-        padding:0px 0px 30px 0px;
+        padding: @gutter-lg;
     }
     .footer-links {
-        float: none;
+        // float: none;
         text-align: center;
     }
     .data{
