--- a/ckanext/amplus/templates/home/snippets/featured_groups.html
+++ b/ckanext/amplus/templates/home/snippets/featured_groups.html
@@ -1,5 +1,8 @@
-{% set groups = h.get_featured_groups(items or 10) %}
-
+{% if groups  %}
+{% set groups = groups %}
+{% else %}
+{% set groups = h.get_featured_groups(items or 10)%}
+{% endif %}
 {% block featured_groups %}
   <div class="group-topics">
     {% block featured_groups_title %}
@@ -17,3 +20,4 @@
     {% endif %}
   </div>
 {% endblock %}
+
