--- a/ckanext/amplus/fanstatic/less/_group.less
+++ b/ckanext/amplus/fanstatic/less/_group.less
@@ -23,6 +23,11 @@
   .flex-justify-center;
 }
 
+.module-content{
+  .group-item{
+    flex: 1 0 40%;
+  }
+}
 .group-item {
   .flex;
   .flex-wrap;
@@ -34,7 +39,7 @@
   box-shadow: 0 0 30px 0 fade(@black, 10%);
   color: @gray-medium;
   transition: background-color @animation-duration;
-
+  position: relative;
   &:hover{
     color: @white;
     background-color: @brand-secondary;
@@ -51,9 +56,23 @@
     .flex-align-center;
   }
 }
-
+.group-content-wrapper{
+  display: flex; 
+  align-items: center; 
+  height: 100%;
+}
+.group-link{
+  position: absolute;
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 100%; 
+  cursor: pointer;
+}
 .group-topics,
 .group-container {
+  margin-left: -3rem;
+  margin-right: -3rem;
   background: @brand-background;
 
   .group-title {
@@ -83,7 +102,7 @@
     border-radius: 50%;
     overflow: hidden;
     flex-shrink: 0;
-
+    
     img {
       width: 100%;
       height: 100%;
