--- a/ckanext/amplus/fanstatic/css/custom.css
+++ b/ckanext/amplus/fanstatic/css/custom.css
@@ -99,6 +99,11 @@
       -ms-flex-pack: center;
           justify-content: center;
 }
+.module-content .group-item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 40%;
+          flex: 1 0 40%;
+}
 .group-item {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -121,6 +126,7 @@
   -webkit-transition: background-color 200ms;
   -o-transition: background-color 200ms;
   transition: background-color 200ms;
+  position: relative;
 }
 .group-item:hover {
   color: #FFFFFF;
@@ -139,8 +145,27 @@
       -ms-flex-align: center;
           align-items: center;
 }
+.group-content-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+}
+.group-link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
 .group-topics,
 .group-container {
+  margin-left: -3rem;
+  margin-right: -3rem;
   background: #efecf4;
 }
 .group-topics .group-title,
