--- a/ckanext/amplus/templates/snippets/custom_group_item.html
+++ b/ckanext/amplus/templates/snippets/custom_group_item.html
@@ -1,17 +1,21 @@
-{% if group.type == "dataset" %}
+{% if group.type == "dataset" or group.type == "showcase" %}
 {% set description = group.notes %}
 {% else %}
 {% set description = group.description %}
 {% endif %}
 
 {% block featured_item %}
+  {% if group.type %}
   <a href="{{ h.url_for(group.type ~ '_read', action='read', id=group.name or group.title)  }}" class="group-item module module-narrow module-shallow">
+    {%else%}
+    <a href="{{  h.url_for(controller='ckanext.datarequests.controllers.ui_controller:DataRequestsUI', action='comment', id=group.get('id',''))}}" class="group-item module module-narrow module-shallow">
+    {%endif%}
     {% block featured_item_header %}
       {% set truncate=truncate or 0 %}
       {% set truncate_title = truncate_title or 0 %}
       {% set title = group.title or group.name %}
       <div class="title-wrap">
-        {% if group.type == "organization" or group.type == "group" %}
+        {% if group.type == "organization" or group.type == "group" or group.type == "showcase" %}
     {% block featured_item_header_image %}
     <div class="group-icon">
       <img src="{{ group.image_display_url or h.url_for_static('/base/images/placeholder-' + group.type + '.png') }}"
@@ -23,6 +27,19 @@
     {% endif %}
         {% block featured_item_header_title %}
         <h3 class="group-title">
+          
+          {% if group.type %}
+          {% else %}
+          {% if group.get('closed', False) %}
+          <span class="uppercase label label-closed">
+            <i class="icon-lock fa fa-lock"></i> {% trans %}Closed{% endtrans %}
+          </span>
+        {% else %}
+          <span class="uppercase label label-open">
+            <i class="icon-unlock fa fa-unlock"></i> {% trans %}Open{% endtrans %}
+          </span>
+        {% endif %}
+        {% endif %}
             {% block heading_private %}
               {% if group.private %}
                 <span class="dataset-private label label-inverse">
@@ -47,7 +64,7 @@
           {% else %}
             <p class="empty group-desc">{{ _("This " + group.type + " has no description") }}</p>
           {% endif %} 
-          {% if group.type != "dataset" and c.controller != 'home' %}
+          {% if group.type != "dataset" and c.controller != 'home' and group.type%}
             {% if group.package_count %}
               <strong
               class="count group-desc">{{ ungettext('{num} Dataset', '{num} Datasets', group.package_count).format(num=group.package_count) }}</strong>
@@ -76,6 +93,17 @@
 
     {% endif %}
     {% endblock %}
+    {% if group.type %}
+    {% else %}
+      <div class="datarequest-properties">
+        {% if h.show_comments_tab() %}
+          <i class="icon-comment fa fa-comment"></i> {{ h.get_comments_number(group.get('id', '')) }}</span>
+        {% endif %}
+        <div class="divider">
+        <span class="date-datarequests">{{ h.time_ago_from_timestamp(group.open_time) }}</span>
+      </div>
+    </div>
+    {% endif %}
 
   </a>
 {% endblock %}
