--- a/ckanext/amplus/templates/snippets/custom_group_item.html
+++ b/ckanext/amplus/templates/snippets/custom_group_item.html
@@ -8,181 +8,182 @@
 
 <!-- Set url for item -->
 {% if group.resource_type is defined %}
-  {% set url_action = 'resource_edit' if url_is_edit and can_edit else 'resource_read' %}
-  {% set url = h.url_for(controller='package', action=url_action, id=pkg.name, resource_id=group.id) %}
+{% set url_action = 'resource_edit' if url_is_edit and can_edit else 'resource_read' %}
+{% set url = h.url_for(controller='package', action=url_action, id=pkg.name, resource_id=group.id) %}
 {% else %}
-  {% if group.type %}
-    {% set url = h.url_for(group.type ~ '_read', action='read', id=group.name or group.title) %}
-  {% else %}
-    {% set url =  h.url_for(controller='ckanext.datarequests.controllers.ui_controller:DataRequestsUI', action='comment', id=group.get('id','')) %}
-  {% endif %}
+{% if group.type %}
+{% set url = h.url_for(group.type ~ '_read', action='read', id=group.name or group.title) %}
+{% else %}
+{% set url =  h.url_for(controller='ckanext.datarequests.controllers.ui_controller:DataRequestsUI', action='comment', id=group.get('id','')) %}
+{% endif %}
 {% endif %}
 
 {% block featured_item %}
 <a href="{{ url }}" class="group-item module module-narrow module-shallow">
-   
 
-    {% block featured_item_header %}
-      {% set truncate=truncate or 0 %}
-      {% set truncate_title = truncate_title or 0 %}
-      {% set title = group.title or group.name %}
-      <div class="title-wrap">
-        {% if group.type == "organization" or group.type == "group" or group.type == "showcase" %}
-          {% block featured_item_header_image %}
-            <div class="group-icon">
-              <img src="{{ group.image_display_url or h.url_for_static('/base/images/placeholder-' + group.type + '.png') }}"
-                alt="{{ group.name }}" />
-              <!-- <i class="fa fa-folder-open" aria-hidden="true"></i> -->
-            </div>
-          {% endblock %}
 
-        {% endif %}
-        {% block featured_item_header_title %}
-        {% if group.resource_type is defined %}
-        {% block resource_item_title %}
-        <object>
-          <a class="heading" href="{{ url }}" title="{{ group.name or group.description }}">
-            <span class="format-label" property="dc:format" data-format="{{ group.format.lower() or 'data' }}">{{ h.get_translated(group, 'format') }}</span>
-            {{ h.popular('views', group.tracking_summary.total, min=10) }}
-          </a>
-    </object>
-      {% endblock %}
-        {% endif %}
-        <h3 class="group-title">
-          
-          {% if group.type is defined or group.resource_type is defined %}
-            {%else%}
-            {% if group.get('closed', False) %}
-              <span class="uppercase label label-closed">
-                <i class="icon-lock fa fa-lock"></i> {% trans %}Closed{% endtrans %}
-              </span>
-            {% else %}
-              <span class="uppercase label label-open">
-                <i class="icon-unlock fa fa-unlock"></i> {% trans %}Open{% endtrans %}
-              </span>
-            {% endif %}
-          {% endif %}
-            {% block heading_private %}
-              {% if group.private %}
-                <span class="dataset-private label label-inverse">
-                  <i class="fa fa-lock"></i>
-                  {{ _('Private') }}
-                </span>
-              {% endif %}
-            {% endblock %}
-
-          {{ group.title or group.name }}</h3>
-        {% endblock %}
-
-      </div>
-      {% block featured_item_header_description %}
-        {% if c.controller == 'package' and group.type == 'group' or c.controller == 'ckanext.showcase.controller:ShowcaseController' and group.type == 'group'  %}
-          {% if truncate == 0 %}
-            <p class="group-desc">{{ h.markdown_extract(description)|urlize }}</p>
-          {% endif %}
-        {% else %}
-          {% if description %}
-            <p class="group-desc">{{ h.markdown_extract(description)|urlize }}</p>
-          {% else %}
-            {% if group.type %}
-            <p class="empty group-desc">{{ _("This " + group.type + " has no description") }}</p>
-            {% elif group.resource_type is defined %}
-            <p class="empty group-desc">{{ _("This resource has no description") }}</p>
-            {%else%}
-            <p class="empty group-desc">{{ _("This datarequest has no description") }}</p>
-            {%endif%}
-          {% endif %} 
-          {% if group.type != "dataset" and c.controller != 'home' and group.type%}
-          {% if group.package_count %}
-            <strong
-              class="count group-desc">{{ ungettext('{num} Dataset', '{num} Datasets', group.package_count).format(num=group.package_count) }}</strong>
-          {% else %}
-            <span class="count group-desc">{{ _('0 Datasets') }}</span>
-          {% endif %}
-        {% endif %}
-        {% endif %}
-      {% endblock %}
-
-    {% endblock %}
-  
-
-    {% block resources %}
-      {% if group.resources and not hide_resources %}
-        {% block resources_outer %}
-          <ul class="dataset-resources list-unstyled">
-            {% block resources_inner %}
-              {% for resource in h.dict_list_reduce(group.resources, 'format') %}
-                <li class="label label-default" data-format="{{ resource.lower() }}">
-                  {{ resource }}
-                </li>
-              {% endfor %}
-            {% endblock %}
-          </ul>
-        {% endblock %}
-
-    {% endif %}
-    {% endblock %}
-    {% if group.type or group.resource_type is defined %}
-    {% else %}
-      <div class="datarequest-properties">
-        {% if h.show_comments_tab() %}
-          <i class="icon-comment fa fa-comment"></i> {{ h.get_comments_number(group.get('id', '')) }}</span>
-        {% endif %}
-        <div class="divider">
-        <span class="date-datarequests">{{ h.time_ago_from_timestamp(group.open_time) }}</span>
-      </div>
+  {% block featured_item_header %}
+  {% set truncate=truncate or 0 %}
+  {% set truncate_title = truncate_title or 0 %}
+  {% set title = group.title or group.name %}
+  <div class="title-wrap">
+    {% if group.type == "organization" or group.type == "group" or group.type == "showcase" %}
+    {% block featured_item_header_image %}
+    <div class="group-icon">
+      <img src="{{ group.image_display_url or h.url_for_static('/base/images/placeholder-' + group.type + '.png') }}"
+        alt="{{ group.name }}" />
+      <!-- <i class="fa fa-folder-open" aria-hidden="true"></i> -->
     </div>
+    {% endblock %}
+
     {% endif %}
-    {% if group.resource_type is defined%}
-    {% block resource_item_explore %}
-  {% if not url_is_edit %}
-  <object>
-  <div class="dropdown btn-group">
-    <a href="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-      <i class="fa fa-share"></i>
-      {{ _('Explore') }}
-      <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu">
-      {% block resource_item_explore_links %}
-      <li>
-        <a href="{{ url }}">
-          {% if group.has_views %}
-            <i class="fa fa-bar-chart-o"></i>
-            {{ _('Preview') }}
-          {% else %}
-            <i class="fa fa-info-circle"></i>
-            {{ _('More information') }}
-          {% endif %}
-        </a>
-      </li>
-      {% if group.url and h.is_url(group.url) %}
-      <li>
-        <a href="{{ group.url }}" class="resource-url-analytics" target="_blank">
-          {% if group.has_views or group.url_type == 'upload' %}
-            <i class="fa fa-arrow-circle-o-down"></i>
-            {{ _('Download') }}
-          {% else %}
-            <i class="fa fa-external-link"></i>
-            {{ _('Go to resource') }}
-          {% endif %}
-        </a>
-      </li>
+    {% block featured_item_header_title %}
+    {% if group.resource_type is defined %}
+    {% block resource_item_title %}
+    <object>
+      <a class="heading" href="{{ url }}" title="{{ group.name or group.description }}">
+        <span class="format-label" property="dc:format"
+          data-format="{{ group.format.lower() or 'data' }}">{{ h.get_translated(group, 'format') }}</span>
+        {{ h.popular('views', group.tracking_summary.total, min=10) }}
+      </a>
+    </object>
+    {% endblock %}
+    {% endif %}
+    <h3 class="group-title">
+
+      {% if group.type is defined or group.resource_type is defined %}
+      {%else%}
+      {% if group.get('closed', False) %}
+      <span class="uppercase label label-closed">
+        <i class="icon-lock fa fa-lock"></i> {% trans %}Closed{% endtrans %}
+      </span>
+      {% else %}
+      <span class="uppercase label label-open">
+        <i class="icon-unlock fa fa-unlock"></i> {% trans %}Open{% endtrans %}
+      </span>
       {% endif %}
-      {% if can_edit %}
-      <li>
-        <a href="{{ h.url_for(controller='package', action='resource_edit', id=pkg.name, resource_id=group.id) }}">
-          <i class="fa fa-pencil-square-o"></i>
-          {{ _('Edit') }}
-        </a>
-      </li>
+      {% endif %}
+      {% block heading_private %}
+      {% if group.private %}
+      <span class="dataset-private label label-inverse">
+        <i class="fa fa-lock"></i>
+        {{ _('Private') }}
+      </span>
       {% endif %}
       {% endblock %}
-    </ul>
+
+      {{ group.title or group.name }}</h3>
+    {% endblock %}
+
   </div>
-</object>
+  {% block featured_item_header_description %}
+  {% if c.controller == 'package' and group.type == 'group' or c.controller == 'ckanext.showcase.controller:ShowcaseController' and group.type == 'group'  %}
+  {% if truncate == 0 %}
+  <p class="group-desc">{{ h.markdown_extract(description)|urlize }}</p>
+  {% endif %}
+  {% else %}
+  {% if description %}
+  <p class="group-desc">{{ h.markdown_extract(description)|urlize }}</p>
+  {% else %}
+  {% if group.type %}
+  <p class="empty group-desc">{{ _("This " + group.type + " has no description") }}</p>
+  {% elif group.resource_type is defined %}
+  <p class="empty group-desc">{{ _("This resource has no description") }}</p>
+  {%else%}
+  <p class="empty group-desc">{{ _("This datarequest has no description") }}</p>
+  {%endif%}
+  {% endif %}
+  {% if group.type != "dataset" and c.controller != 'home' and group.type%}
+  {% if group.package_count %}
+  <strong
+    class="count group-desc">{{ ungettext('{num} Dataset', '{num} Datasets', group.package_count).format(num=group.package_count) }}</strong>
+  {% else %}
+  <span class="count group-desc">{{ _('0 Datasets') }}</span>
+  {% endif %}
+  {% endif %}
   {% endif %}
   {% endblock %}
+
+  {% endblock %}
+
+
+  {% block resources %}
+  {% if group.resources and not hide_resources %}
+  {% block resources_outer %}
+  <ul class="dataset-resources list-unstyled">
+    {% block resources_inner %}
+    {% for resource in h.dict_list_reduce(group.resources, 'format') %}
+    <li class="label label-default" data-format="{{ resource.lower() }}">
+      {{ resource }}
+    </li>
+    {% endfor %}
+    {% endblock %}
+  </ul>
+  {% endblock %}
+
+  {% endif %}
+  {% endblock %}
+  {% if group.type or group.resource_type is defined %}
+  {% else %}
+  <div class="datarequest-properties">
+    {% if h.show_comments_tab() %}
+    <i class="icon-comment fa fa-comment"></i> {{ h.get_comments_number(group.get('id', '')) }}</span>
     {% endif %}
-  </a>
+    <div class="divider">
+      <span class="date-datarequests">{{ h.time_ago_from_timestamp(group.open_time) }}</span>
+    </div>
+  </div>
+  {% endif %}
+  {% if group.resource_type is defined%}
+  {% block resource_item_explore %}
+  {% if not url_is_edit %}
+  <object>
+    <div class="dropdown btn-group">
+      <a href="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+        <i class="fa fa-share"></i>
+        {{ _('Explore') }}
+        <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu">
+        {% block resource_item_explore_links %}
+        <li>
+          <a href="{{ url }}">
+            {% if group.has_views %}
+            <i class="fa fa-bar-chart-o"></i>
+            {{ _('Preview') }}
+            {% else %}
+            <i class="fa fa-info-circle"></i>
+            {{ _('More information') }}
+            {% endif %}
+          </a>
+        </li>
+        {% if group.url and h.is_url(group.url) %}
+        <li>
+          <a href="{{ group.url }}" class="resource-url-analytics" target="_blank">
+            {% if group.has_views or group.url_type == 'upload' %}
+            <i class="fa fa-arrow-circle-o-down"></i>
+            {{ _('Download') }}
+            {% else %}
+            <i class="fa fa-external-link"></i>
+            {{ _('Go to resource') }}
+            {% endif %}
+          </a>
+        </li>
+        {% endif %}
+        {% if can_edit %}
+        <li>
+          <a href="{{ h.url_for(controller='package', action='resource_edit', id=pkg.name, resource_id=group.id) }}">
+            <i class="fa fa-pencil-square-o"></i>
+            {{ _('Edit') }}
+          </a>
+        </li>
+        {% endif %}
+        {% endblock %}
+      </ul>
+    </div>
+  </object>
+  {% endif %}
+  {% endblock %}
+  {% endif %}
+</a>
 {% endblock %}
