--- a/ckanext/amplus/templates/package/read.html
+++ b/ckanext/amplus/templates/package/read.html
@@ -1,3 +1,4 @@
+
 {% ckan_extends %}
 
 {% block primary_content_inner %}
@@ -6,7 +7,7 @@
   {% endblock %}
 
   {% block package_resources %}
-    {% snippet "package/snippets/resources_list.html", pkg=pkg, resources=pkg.resources %}
+    {{ h.snippet('home/snippets/featured_groups.html', pkg=pkg, groups=pkg.resources) }}
   {% endblock %}
 
 {% endblock %}
